@@ -3,41 +3,49 @@ package br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.service;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.mock;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
 
-import java.util.List;
+import java.util.Collections;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+
+import com.github.javafaker.Faker;
 
 import br.com.grupobrasileiro.sistema_grupo_brasileiro_backend.repository.UserRepository;
 
 public class AuthorizationServiceTest {
 
-    private AuthorizationService authorizationService;
-    private UserRepository userRepository;
+	 @InjectMocks
+	    private AuthorizationService authorizationService;
 
-    @BeforeEach
-    public void setUp() {
-        userRepository = mock(UserRepository.class);
-        authorizationService = new AuthorizationService();
-        authorizationService.repository = userRepository;
-    }
+	    @Mock
+	    private UserRepository userRepository;
+
+	    private Faker faker;
+
+	    @BeforeEach
+	    public void setUp() {
+	        MockitoAnnotations.openMocks(this);
+	        faker = new Faker();
+	    }
 
     @Test
     public void loadUserByUsername_UserExists_ReturnsUserDetails() {
         // Arrange
         String email = "test@example.com";
         String password = "password";
-        UserDetails userDetails = new User(
+        UserDetails userDetails = new org.springframework.security.core.userdetails.User(
             email, 
             password, 
-            List.of(new SimpleGrantedAuthority("ROLE_USER"))
+            Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
         );
 
         when(userRepository.findByEmail(email)).thenReturn(userDetails);
@@ -55,13 +63,20 @@ public class AuthorizationServiceTest {
     void loadUserByUsername_UserDoesNotExist_ThrowsException() {
         // Arrange
         String emailLogin = "nonexistent@example.com";
-
-        when(userRepository.findByEmail(emailLogin)).thenReturn(null);
+        
+        
+        when(userRepository.findByEmail(emailLogin)).thenThrow(new UsernameNotFoundException("User not found with email: " + emailLogin));
 
         // Act & Assert
-        assertThrows(UsernameNotFoundException.class, () -> 
-            authorizationService.loadUserByUsername(emailLogin),
-            "Expected UsernameNotFoundException to be thrown."
+        UsernameNotFoundException thrown = assertThrows(UsernameNotFoundException.class, () -> 
+            authorizationService.loadUserByUsername(emailLogin)
         );
+
+        // Assert
+        String expectedMessagePart = "User not found with email: " + emailLogin;
+        assertTrue(thrown.getMessage().contains(expectedMessagePart), 
+            "Exception message should contain: " + expectedMessagePart);
     }
+
+
 }
